[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Cards.gd" type="Script" id=2]

[node name="Main" type="Node2D"]

[node name="UI" parent="." index="0" instance=ExtResource( 1 )]

_sections_unfolded = [ "Transform" ]

[node name="Cards" type="Node2D" parent="." index="1"]

script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
width = 5
height = 7

[node name="DeleteCardsTween" type="Tween" parent="Cards" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="RedrawTimer" type="Timer" parent="Cards" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="Cards/RedrawTimer" to="Cards" method="_on_RedrawTimer_timeout"]


